# Moffenzeef-VCV

./: .gitignore  .gitmodules  Bobcat.cpp  CLAUDE.md  CMakeLists.txt  GMO.cpp  Makefile  Muskrat.cpp  README.md  plugin-mm.json  plugin.cpp  plugin.dylib  plugin.hpp  plugin.json
.github/workflows/: build-metamodule-plugins.yml  build-plugin.yml
metamodule-plugins/: Moffenzeef-v0.1-fw-1.6.mmplugin  Moffenzeef.mmplugin
res/wavetables/: GMO_tables.hh  StargazerWavetables.hpp
src/: BadIdea1800.cpp  BadIdea9.cpp  Bobcat.cpp  BusMult.cpp  Count.cpp  Deviant.cpp  DialUp.cpp  FourteenHPBlank.cpp  GMO.cpp  INTENSIFIES.cpp  Kleztizer.cpp  Kriket.cpp  Mito.cpp  Moffenmix.cpp  Mongrel.cpp  Muskrat.cpp  QuadDeviant.cpp  Simplify.cpp  Stargazer.cpp  Swarm.cpp  Tantz.cpp  Tehom.cpp  TheRunner.cpp  TwoHPBlank.cpp  plugin.cpp  plugin.hpp
src/helpers/: lut.hh  math_lut.cpp  math_lut.hpp
